# 2024-m1-parareal

./: .gitignore  Lorenz_model.ipynb  README.adoc  README.md  References.bib  pyproject.toml  raport.aux  raport.fdb_latexmk  raport.fls  raport.tex  requirements.txt
.github/workflows/: python-package.yml
Enkf/: lorenz_EnKF.ipynb  test_Enkf.ipynb
notebooks/: Lorenz_model.ipynb  Parareal_Convergence_order.ipynb  Parareal_Nbr_iter_test.ipynb  Parareal_Speedup.ipynb  Test.ipynb  test.ipynb
notebooks/python/: conv_test.py  conv_test_plot.py  conv_test_seq.py  convergence_order_test.py  convergence_order_test.sh  execution_times.txt  lorenz_Gander.py  lorenz_animat.py  lorenz_example_rho.py  lorenz_parallel.py  nbr_iter_test.py  nbr_iter_test.sh  odre_converge.py  parareal_speed_test.py  speedup_test.sh  time.sh
notebooks/python/data/: data_cv_order_2024-07-16_15-55-38.txt  data_nbr_iter_2024-07-17_10-15-01.txt  data_speedup_2024-07-15_14-45-51.txt  job_ids_cv_order_2024-07-16_15-55-38.txt  job_ids_nbr_iter_2024-07-17_10-15-01.txt  job_ids_speedup_2024-07-15_14-45-51.txt
parareal/: lorenz_animat.py  lorenz_example_rho.py  lorenz_parallel.py  test_func.py
parareal/lorenz/: lorenz.py
parareal/parareal/: mpi_parareal.py  parareal.py
parareal/solver/: adaptive_rk4.py  beuler.py  brk2.py  brk4.py  euler.py  feuler.py  rk2.py  rk4.py  runge_kutta.py
parareal/utils/: converge_check.py  plot3d.py
presentation/: beamerinnerthemeSimplePlusAIC.sty  main.tex  presentation.tex  ref.bib
report/: rapport.tex
src/: Lorenz_model.ipynb  Test.ipynb  lorenz_animat.py  lorenz_example_rho.py  lorenz_parallel.py  mpi_parareal.py  odre_converge.py  parareal.py  plot.py  runge_kutta.py  test_func.py
stage/report/: centrale.sty  rapport.tex  ref.bib
tests/: test_mpi_parareal.py  test_multi_process.py  test_parareal.py
