[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parareal"
version = "1.0.0"
description = "parareal algorithm"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "mpi4py>=3.0.3",
    "numpy>=1.19.5",
    "pytest>=6.0",
]


[[project.authors]]
name = "Oussama BOUHENNICHE"
email = "oussamabouhenniche14@gmail.com"

[tool.black]
line-length = 88
target-version = ['py38', 'py310']

[tool.isort]
profile = "black"

[tool.setuptools]
packages = ["parareal", "parareal.lorenz", "parareal.parareal", "parareal.solver", "parareal.utils"]